exercises/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: exercises
  labels:
    name: exercises
    istio.io/dataplane-mode: ambient
    istio.io/use-waypoint: waypoint
